<resources>
    <string name="app_name">BINCard</string>
    <string name="bin">BIN</string>
    <string name="scheme_network">Scheme / Network</string>
    <string name="brand">Brand</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="length">Length</string>
    <string name="luhn">LUHN</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="slash"> / </string>
    <string name="type">Type</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="prepaid">Prepaid</string>
    <string name="country">Country</string>
    <string name="latitude_longitude">(latitude: &lt;b>%1$s&lt;/b>, longitude: &lt;b>%2$s&lt;/b>)</string>
    <string name="bank">Bank</string>
    <string name="submit">Submit</string>
    <string name="enter_your_bin">Enter your BIN</string>
    <string name="try_again">BIN – first 6–8 digits from card number.\nTry again!</string>
    <string name="no_found">No matching card is found.</string>
    <string name="bin_detail_fragment_title">Bin Details</string>
    <string name="overview_fragment_title">Bin</string>

</resources>